--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title> </title>
 
 	<meta charset="utf-8">
 	<!--Import Google Icon Font-->
