Correção de bugs

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title> </title>
+	<title>Mosamô Patchwork</title>
 
 	<meta charset="utf-8">
 	<!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/materialize.css">
+	<link rel="stylesheet" type="text/css" href="css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/unique.css">
+	
+	<link rel="icon" type="image/png" href="imgs/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="imgs/favicon-16x16.png" sizes="16x16" />
+
 </head>
 <body>
 
@@ -53,7 +57,7 @@
 	      			<button class="bt-entrar btn waves-effect" type="submit" name="action">Entrar</button>
 
 	      			<p id="ou">ou</p>
-      				<button class="bt-loginf btn waves-effect" type="submit" name="action">Logar com o Facebook
+      				<button class="bt-loginf btn waves-effect" type="submit" name="action">Logar com o Facebook</button>
 
 		      		<button class="bt-loging btn waves-effect" type="submit" name="action"><i class="mdi mdi-facebook-box"></i>Logar com o Google</button>
 
@@ -194,7 +198,7 @@
 
 	<div class="produto col s6 m3 l3">
 		<section>
-			<a href="#desc-prod" class="modal-trigger"><img title="Clique para ver a descrição do produto" id="img-prod" src="imgs/produtos/bolsa-sagrado-coração-de-jesus.jpeg"></a>
+			<a href="#desc-prod" class="modal-trigger"><img title="Clique para ver a descrição do produto" id="img-prod" src="imgs/produtos/bolsa-sagrado-coracao-de-Jesus.jpg"></a>
 		</section>
 		<section>
 			<p id="nome-prod">Bolsa Sagrado Coração de Jesus</p>
@@ -212,7 +216,7 @@
 
 	<div class="produto col s6 m3 l3">
 		<section>
-			<a href="#desc-prod" class="modal-trigger"><img title="Clique para ver a descrição do produto" id="img-prod" src="imgs/produtos/Bolsa-lado-paris.jpeg"></a>
+			<a href="#desc-prod" class="modal-trigger"><img title="Clique para ver a descrição do produto" id="img-prod" src="imgs/produtos/bolsa-lado-paris.jpg"></a>
 		</section>
 		<section>
 			<p id="nome-prod">Bolsa Paris</p>
@@ -230,7 +234,7 @@
 
 	<div class="produto col s6 m3 l3">
 		<section>
-			<a href="#desc-prod" class="modal-trigger"><img title="Clique para ver a descrição do produto" id="img-prod" src="imgs/produtos/a-menina-e-o-cachorro.jpeg"></a>
+			<a href="#desc-prod" class="modal-trigger"><img title="Clique para ver a descrição do produto" id="img-prod" src="imgs/produtos/a-menina-e-o-cachorro.jpg"></a>
 		</section>
 		<section>
 			<p id="nome-prod">A Menina e o Cachorro</p>
@@ -248,7 +252,7 @@
 
 	<div class="produto col s6 m3 l3">
 		<section>
-			<a href="#desc-prod" class="modal-trigger"><img title="Clique para ver a descrição do produto" id="img-prod" src="imgs/produtos/bolsa-anjo.jpeg"></a>
+			<a href="#desc-prod" class="modal-trigger"><img title="Clique para ver a descrição do produto" id="img-prod" src="imgs/produtos/bolsa-anjo.jpg"></a>
 		</section>
 		<section>
 			<p id="nome-prod">Bolsa Anjo</p>
